--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,12 @@ header {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    padding: 10px 20px;
-    background: linear-gradient(135deg, #2a2a3a 0%, #1a1a2e 100%);
-    color: #ffffff;
-    flex-wrap: wrap;
-    z-index: 10;
+    background: #000;
+    padding: 5px 15px;
 }
 
 header img {
-    max-width: 70px;
+    max-width: 50px;
     height: auto;
     margin-right: 15px;
     order: 1;
@@ -26,7 +23,7 @@ header img {
 
 header h1 {
     margin: 0;
-    font-size: 1.8em;
+    font-size: 1.3em;
     flex: 1;
     order: 2;
 }
@@ -34,9 +31,9 @@ header h1 {
 nav {
     flex: 0 0;
     order: 3;
-    background: #0a2540;
+    background: #000000;
     padding: 10px;
-    margin-top: 100px;
+    margin-top: 50px;
     z-index: 15;
 }
 
@@ -59,7 +56,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #7f00ff;
+    color: #cc5500;
 }
 
 main {
@@ -113,4 +110,8 @@ header > h1 {
 
 main article p {
     line-height: 1.6;
+}
+
+a:link {
+    color: #cc5500;
 }
